@@ -26,7 +26,7 @@ export(Surv, aeqSurv, aareg, agreg.fit,
        psurvreg, qsurvreg, dsurvreg,
        pspline, pyears, ratetable, ratetableDate, 
        ridge, rsurvreg, statefig, strata, survConcordance,
-       survSplit, survdiff, survexp,  survfit ,
+       survSplit, survdiff, survexp,  survfit,
        survfit.formula,
        survfitcoxph.fit, survfitKM, survfitCI,
        survobrien,  
