@@ -1,4 +1,4 @@
-/* $Id: chinv2.c 11357 2009-09-04 15:22:46Z therneau $
+/*
 **
 ** matrix inversion, given the FDF' cholesky decomposition
 **
@@ -15,8 +15,8 @@
 
 void chinv2(double **matrix , int n)
      {
-     register double temp;
-     register int i,j,k;
+     double temp;
+     int i,j,k;
 
      /*
      ** invert the cholesky in the lower triangle
