@@ -1,4 +1,4 @@
-/* $Id: coxscore.c 11357 2009-09-04 15:22:46Z therneau $
+/*
 **
 ** Compute the score residuals for a Cox model
 **
