@@ -1,4 +1,3 @@
-/* $Id: survdiff2.c 11166 2008-11-24 22:10:34Z therneau $ */
 #include <math.h>
 #include "survS.h"
 #include "survproto.h"
