@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-03-20 r74428) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-04-09 r74565) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -29,7 +29,7 @@ Type 'q()' to quit R.
 +     tdata$Opening <- temp[i]
 +     tpred[,i] <- predict(fit1, newdata=tdata)
 +  }
-> all.equal(y1$estimate[,"PMM"], colMeans(tpred))
+> all.equal(y1$estimate[,"pmm"], colMeans(tpred))
 [1] TRUE
 > 
 > # This fit is deficient: there are no Opening=L and Mask=A6 obs
@@ -55,7 +55,7 @@ Type 'q()' to quit R.
 +     suppressWarnings(tpreda[,i] <- predict(fit2, newdata=tdata))
 +  }
 > tpreda[,"A6"] <- NA  # the A6 estimate is deficient
-> aeq(y2a$estimate[,"PMM"], colMeans(tpreda))
+> aeq(y2a$estimate[,"pmm"], colMeans(tpreda))
 [1] TRUE
 > 
 > tdata <- do.call(expand.grid, fit2$xlevels[1:3])
@@ -67,11 +67,11 @@ Type 'q()' to quit R.
 +     suppressWarnings(tpredb[,i] <- predict(fit2, newdata=tdata))
 +  }
 > tpredb[,"L"] <- NA  
-> aeq(y2b$estimate[,"PMM"], colMeans(tpredb))
+> aeq(y2b$estimate[,"pmm"], colMeans(tpredb))
 [1] TRUE
 > 
 > # Solder should be all NA
-> all(is.na(y2c$estimate[,"PMM"]))
+> all(is.na(y2c$estimate[,"pmm"]))
 [1] TRUE
 > 
 > # Tests for Solder are defined for a non-factorial population, however.
@@ -86,7 +86,7 @@ Type 'q()' to quit R.
 +     tdata$Solder[] <- temp[i]
 +     suppressWarnings(tpredd[,i] <- predict(fit2, newdata=tdata))
 + }
-> aeq(y2d$estimate$PMM, colMeans(tpredd))
+> aeq(y2d$estimate$pmm, colMeans(tpredd))
 [1] TRUE
 > 
 > #
@@ -142,4 +142,4 @@ Type 'q()' to quit R.
 > 
 > proc.time()
    user  system elapsed 
-  1.032   0.012   1.041 
+  1.004   0.032   1.034 
